# sole-r1-model

./: README.md  readme.md
model_outputs/sole-r1/robosuite/lift/successful/: robosuite_lift_episode_14_successful_max_reward_100.json  robosuite_lift_episode_15_successful_max_reward_100.json  robosuite_lift_episode_16_successful_max_reward_100.json  robosuite_lift_episode_17_successful_max_reward_100.json  robosuite_lift_episode_18_successful_max_reward_100.json
model_outputs/sole-r1/robosuite/lift/unsuccessful/: robosuite_lift_episode_00_unsuccessful_max_reward_1.json  robosuite_lift_episode_01_unsuccessful_max_reward_2.json  robosuite_lift_episode_02_unsuccessful_max_reward_4.json  robosuite_lift_episode_03_unsuccessful_max_reward_4.json  robosuite_lift_episode_04_unsuccessful_max_reward_4.json  robosuite_lift_episode_05_unsuccessful_max_reward_6.json  robosuite_lift_episode_06_unsuccessful_max_reward_8.json  robosuite_lift_episode_07_unsuccessful_max_reward_10.json  robosuite_lift_episode_08_unsuccessful_max_reward_24.json  robosuite_lift_episode_09_unsuccessful_max_reward_25.json  robosuite_lift_episode_10_unsuccessful_max_reward_35.json  robosuite_lift_episode_11_unsuccessful_max_reward_37.json  robosuite_lift_episode_12_unsuccessful_max_reward_38.json  (+1 more)
reward_client/: README.md  main.py  pyproject.toml  run.sh  utils.py
reward_server/: Dockerfile  README.md  pyproject.toml  run.sh
reward_server/src/reward_server/: constants.py  gemini.py  gpt.py  main.py  utils.py  vlm_batch_decode.py
reward_server/src/reward_server/config/: default.yaml  gpt.yaml  local.yaml
reward_server/src/reward_server/tests/: test_utils.py
(+19 files in other folders)
